refactor[ticho-trace]: 模块整合20%